5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1638_651.log
== SUBMITION (2019-04-16 10:25:26) 
-- CODE:
h = float(input("altura: "))
sex = (input("e menino ou menina? (M/F) ")).upper()
if(sex="M"):
	p = 72.7*h-58
else:
	p = 62.1*h-44.7
print(round(p, 2))

-- EXECUTION TIME:
0.171412
-- ERROR:
  File "/home/codebench/codes/1638/651/main.py", line 3
    if(sex="M"):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:25:56) 
-- CODE:
h = float(input("altura: "))
sex = (input("e menino ou menina? (M/F) ")).upper()
if(sex="M"):
	p = (72.7*h)-58
else:
	p = (62.1*h)-44.7
print(round(p, 2))

-- EXECUTION TIME:
0.136384
-- ERROR:
  File "/home/codebench/codes/1638/651/main.py", line 3
    if(sex="M"):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:22) 
-- CODE:
h = float(input("altura: "))
sex = (input("e menino ou menina? (M/F) ")).upper()
if(sex="M"):
	p = (72.7*h)-58
else:
	p = (62.1*h)-44.7
print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    if(sex="M"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:26:32) 
-- CODE:
h = float(input("altura: "))
sex = (input("e menino ou menina? (M/F) ")).upper()
if(sex=="M"):
	p = (72.7*h)-58
else:
	p = (62.1*h)-44.7
print(round(p, 2))

-- EXECUTION TIME:
0.158059
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
